@@ -16,6 +16,7 @@
 
 from optparse import OptionParser
 import os
+import signal
 import sys
 
 from testrepository import ui
@@ -163,6 +164,10 @@ class UI(ui.AbstractUI):
                 self._stderr.write("Unexpected arguments: %r\n" % args)
         return not failed and args == []
 
+    def _clear_SIGPIPE(self):
+        """Clear SIGPIPE : child processes expect the default handler."""
+        signal.signal(signal.SIGPIPE, signal.SIG_DFL)
+
     def subprocess_Popen(self, *args, **kwargs):
         import subprocess
-        return subprocess.Popen(*args, **kwargs)
+        return subprocess.Popen(*args, preexec_fn=self._clear_SIGPIPE, **kwargs)
