@@ -22,6 +22,9 @@ CHANGES
   without a bzr tree : this makes it easier to snapshot without doing a 
   release. (Jonathan Lange)
 
+* ``testr run`` now resets the SIGPIPE handler to default - which is what
+  most Unix processes expect. (Robert Collins)
+
 * ``testr run`` will now pass -d to the ``testr load`` invocation, so that
   running ``testr run -d /some/path`` will work correctly.
   (Robert Collins, #529698)
